--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <cucumber.version>7.3.4</cucumber.version>
-        <selenium.version>3.141.59</selenium.version>
+        <selenium.version>4.5.0</selenium.version>
         <testng.version>7.5</testng.version>
         <restAssured.version>5.1.1</restAssured.version>
         <hamcrest.version>2.2</hamcrest.version>
@@ -37,12 +37,6 @@
             <artifactId>cucumber-java</artifactId>
             <version>${cucumber.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>info.cukes</groupId>-->
-<!--            <artifactId>cucumber-core</artifactId>-->
-<!--            <version></version>-->
-<!--            <scope>test.test</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
@@ -65,12 +59,6 @@
             <artifactId>slf4j-nop</artifactId>
             <version>2.0.0-alpha6</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>info.cukes</groupId>-->
-<!--            <artifactId>cucumber-testng</artifactId>-->
-<!--            <version>1.2.4</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -96,9 +84,25 @@
             <version>5.1.1</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
+        </dependency>
+       <dependency>
+        <groupId>tech.grasshopper</groupId>
+        <artifactId>extentreports-cucumber7-adapter</artifactId>
+        <version>1.7.0</version>
+    </dependency>
 
     </dependencies>
+<profiles><profile>
+    <id>test</id>
+    <build>
 
+    </build>
+</profile></profiles>
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
