--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <cucumber.version>7.3.4</cucumber.version>
+        <cucumber.version>7.8.1</cucumber.version>
         <selenium.version>4.5.0</selenium.version>
         <testng.version>7.5</testng.version>
+        <junit.version>4.13.1</junit.version>
         <restAssured.version>5.1.1</restAssured.version>
         <hamcrest.version>2.2</hamcrest.version>
     </properties>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
